# tremotesf2

./: .cirrus.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  clang-format-all.sh  org.equeim.Tremotesf.json  tremotesf.pro  vcpkg-configuration.json  vcpkg.json
data/: CMakeLists.txt  InstallBreezeIcons.cmake  data.pri  org.equeim.Tremotesf.appdata.xml.in  org.equeim.Tremotesf.desktop.in
data/authors/: authors.html  authors.qrc  authors_en_US.html  authors_es_ES.html  authors_fr.html  authors_it_IT.html  authors_ru.html
data/desktop/: .org.equeim.Tremotesf.appdata.xml.kate-swp  org.equeim.Tremotesf.appdata.xml  org.equeim.Tremotesf.appdata.xml.in  org.equeim.Tremotesf.desktop  org.equeim.Tremotesf.desktop.in  tremotesf.desktop
data/po/: LINGUAS  LINGUAS.license  de.po  en.po  es_ES.po  fr.po  hu_HU.po  it_IT.po  nl.po  nl_BE.po  pl.po  ru.po  tr.po  update.sh  zh_CN.po
packaging/macos/: !!! ATTENTION !!!.txt  !!! ATTENTION !!!.txt.license  CMakeLists.txt  Info.plist.in  StripExecutable.cmake
src/: CMakeLists.txt  accounts.cpp  accounts.h  accountsmodel.cpp  accountsmodel.h  alltrackersmodel.cpp  alltrackersmodel.h  authors.html  baseproxymodel.cpp  baseproxymodel.h  basetorrentfilesmodel.cpp  basetorrentfilesmodel.h  basetorrentsfilterssettingsmodel.cpp  basetorrentsfilterssettingsmodel.h  bencodeparser.cpp  bencodeparser.h  commandlineparser.cpp  commandlineparser.h  desktoputils.cpp  desktoputils.h  downloaddirectoriesmodel.cpp  downloaddirectoriesmodel.h  filemanagerlauncher.cpp  filemanagerlauncher.h  filemanagerlauncher_fallback.cpp  filemanagerlauncher_freedesktop.cpp  filemanagerlauncher_macos.mm  filemanagerlauncher_windows.cpp  fileutils.cpp  fileutils.h  formatutils.cpp  formatutils.h  ipcclient.cpp  ipcclient.h  ipcclient_dbus.cpp  ipcclient_socket.cpp  ipcserver.cpp  ipcserver.h  ipcserver_dbus.cpp  ipcserver_dbus.h  (+90 more)
src/coroutines/: coroutinefwd.h  coroutines.cpp  coroutines.h  coroutines_test.cpp  dbus.h  hostinfo.h  network.h  qobjectsignal.h  scope.cpp  scope.h  threadpool.h  timer.h  waitall.cpp  waitall.h
src/desktop/: aboutdialog.cpp  aboutdialog.h  aboutdialog.qrc  accounteditdialog.cpp  accounteditdialog.h  accountsdialog.cpp  accountsdialog.h  addtorrentdialog.cpp  addtorrentdialog.h  basetreeview.cpp  basetreeview.h  commondelegate.cpp  commondelegate.h  connectionsettingsdialog.cpp  connectionsettingsdialog.h  darkthemeapplier.h  darkthemeapplier_noop.cpp  darkthemeapplier_windows.cpp  desktoputils.cpp  desktoputils.h  fileselectionwidget.cpp  fileselectionwidget.h  mainwindow.cpp  mainwindow.h  mainwindowsidebar.cpp  mainwindowsidebar.h  mainwindowstatusbar.cpp  mainwindowstatusbar.h  org.freedesktop.FileManager1.xml  org.xfce.FileManager.xml  remotedirectoryselectionwidget.cpp  remotedirectoryselectionwidget.h  servereditdialog.cpp  servereditdialog.h  serversdialog.cpp  serversdialog.h  serversettingsdialog.cpp  serversettingsdialog.h  serverstatsdialog.cpp  settingsdialog.cpp  (+16 more)
src/ipc/: fileopeneventhandler.cpp  fileopeneventhandler.h  ipcclient.h  ipcclient_dbus.cpp  ipcclient_socket.cpp  ipcserver.h  ipcserver_dbus.cpp  ipcserver_dbus.h  ipcserver_dbus_service.cpp  ipcserver_dbus_service.h  ipcserver_socket.cpp  ipcserver_socket.h  org.freedesktop.Application.xml
src/libtremotesf/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  itemlistupdater.h  itemlistupdater_test.cpp  peer.cpp  peer.h  println.h  println_test.cpp  qtsupport.h  resources.qrc  rpc.cpp  rpc.h  serversettings.cpp  serversettings.h  serverstats.cpp  serverstats.h  stdutils.h  torrent.cpp  torrent.h  torrent_qdebug.h  torrentfile.cpp  torrentfile.h  tracker.cpp  tracker.h
src/log/: demangle.cpp  demangle.h  demangle_test.cpp  fmt_format_include_wrapper.h  formatters.cpp  formatters.h  log.cpp  log.h  log_test.cpp
src/rpc/: addressutils.cpp  addressutils.h  jsonutils.h  mounteddirectoriesutils.cpp  mounteddirectoriesutils.h  numbervaluerange.h  pathutils.cpp  pathutils.h  pathutils_test.cpp  peer.cpp  peer.h  qsslcertificateformatter.cpp  qsslcertificateformatter.h  requestrouter.cpp  requestrouter.h  requestrouter_test.cpp  rpc.cpp  rpc.h  servers.cpp  servers.h  servers_migration_test.cpp  servers_test.cpp  serversettings.cpp  serversettings.h  serverstats.cpp  serverstats.h  torrent.cpp  torrent.h  torrentfile.cpp  torrentfile.h  tracker.cpp  tracker.h  tracker_test.cpp  trpc.cpp  trpc.h
src/sailfish/: directorycontentmodel.h  selectionmodel.h
src/sailfishos/: directorycontentmodel.cpp  directorycontentmodel.h  sailfishosutils.cpp  sailfishosutils.h  selectionmodel.cpp  selectionmodel.h
src/startup/: commandlineparser.cpp  commandlineparser.h  main.cpp  main_windows.cpp  main_windows.h  recoloringsvgiconengineplugin.cpp  recoloringsvgiconengineplugin.h  signalhandler.h  signalhandler_unix.cpp  signalhandler_windows.cpp  windowsfatalerrorhandlers.cpp  windowsfatalerrorhandlers.h  windowsmessagehandler.cpp  windowsmessagehandler.h
src/test-torrents/: Fedora-Workstation-Live-x86_64-34.torrent  debian-10.9.0-amd64-netinst.iso.torrent  enwiki-20231220-pages-articles-multistream.xml.bz2.torrent
src/tremotesf/: authors.html  bencodeparser.cpp  bencodeparser.h  desktoputils.cpp  desktoputils.h  filemanagerlauncher.cpp  filemanagerlauncher.h  filemanagerlauncher_fallback.cpp  filemanagerlauncher_freedesktop.cpp  filemanagerlauncher_windows.cpp  license.html  org.freedesktop.FileManager1.xml  org.freedesktop.Notifications.xml  resources.qrc  settings.cpp  settings.h  translators.html  tremotesf.manifest  tremotesf.manifest.rc  tremotesf.rc  unixhelpers.cpp  unixhelpers.h  utils.cpp  utils.h  windowshelpers.cpp  windowshelpers.h
src/ui/: darkthemeapplier_windows.cpp  darkthemeapplier_windows.h  iconthemesetup.h  iconthemesetup_bundled.cpp  iconthemesetup_freedesktop.cpp  (+12 more)
translations/: CMakeLists.txt  de.ts  en.ts  es.ts  es_ES.ts  fr.ts  it_IT.ts  nl.ts  nl_BE.ts  pl.ts  ru.ts  source.ts  tr.ts  translations.pri  translations.qrc  update.sh  zh_CN.ts
(+441 files in other folders)
